--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -1,21 +1,79 @@
-name: Lint
+name: Node Exporter Test
+on:
+  workflow_call:
+  pull_request:
+    branches:
+      - main
 
-on: pull_request
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
-    lint-charm:
-        name: "Run linter"
-        runs-on: "ubuntu-latest"
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-python@v2
-              with:
-                  python-version: '3.x'
-                  architecture: 'x64'
-            - name: "Install tox"
-              run: |
-                  pip install tox
+  inclusive-naming-check:
+    name: Inclusive naming check
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run tests
+        uses: get-woke/woke-action@v0
+        with:
+          fail-on-error: true
 
-            - name: "lint the charms"
-              run: |
-                  make lint
+  commitlint:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Install commitlint
+        run: npm install -D @commitlint/cli @commitlint/config-conventional
+      - name: Validate PR commits with commitlint
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Just
+        uses: extractions/setup-just@v2
+        with:
+          just-version: 1.38.0
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: 0.5.8
+      - name: Install Charmcraft
+        run: sudo snap install charmcraft --classic --channel latest/stable
+      - name: Run linters
+        run: just lint
+
+  type-check:
+    name: Static type checking
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Just
+        uses: extractions/setup-just@v2
+        with:
+          just-version: 1.38.0
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: 0.5.8
+      - name: Install Charmcraft
+        run: sudo snap install charmcraft --classic --channel latest/stable
+      - name: Run tests
+        run: just repo typecheck
