--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,9 +1,46 @@
+name: node-exporter
+summary: >
+    Export machine metrics to Prometheus.
+
+links:
+  contact: https://matrix.to/#/#hpc:ubuntu.com
+
+  issues:
+    - https://github.com/charmed-hpc/node-exporter-operator/issues
+
+  source:
+    - https://github.com/charmed-hpc/node-exporter-operator
+
+subordinate: true
+
+assumes:
+  - juju
+
 type: charm
-bases:
-  - build-on:
-      - name: ubuntu
-        channel: "22.04"
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
-        architectures: [amd64]
+platforms:
+  ubuntu@24.04:amd64:
+
+parts:
+  charm:
+    influxdb:
+    source: .
+    plugin: uv
+    build-snaps:
+      - astral-uv
+
+requires:
+  juju-info:
+    interface: juju-info
+    scope: container
+
+provides:
+  metrics-endpoint:
+    interface: prometheus_scrape
+
+config:
+  options:
+    node-exporter-version:
+      type: string
+      default: "1.9.1"
+      description: >
+        The node-exporter version to install.
